Add startups module
